--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 <!-- site-branding -->
                                 <div class="site-branding">
                                     <a class="home-link" href="index.html" title="Altech" rel="home">
-                                        <img id="logo-img" class="img-fluid" src="assets/images/logo.png" alt="logo">
+                                        <img id="logo-img" class="img-fluid" src="assets/images/Jethwa_Logo.png" alt="logo">
                                     </a>
                                 </div>
                                 <!-- site-branding end -->
@@ -1230,7 +1230,7 @@
                                         <div class="featured-title">
                                             <h5>Book Your Appoiment</h5>
                                         </div>
-                                        <div class="ttm-box-description">Aute irure dolor reprehenderit velit esse cillum dolore fugiat</div>
+                                        <div class="ttm-box-description">Walk-in and file your case at the reception.</div>
                                     </div>
                                 </div>
                                 <div class="ttm-processbox text-center">
@@ -1244,7 +1244,7 @@
                                         <div class="featured-title">
                                             <h5>Wait For Your Slot</h5>
                                         </div>
-                                        <div class="ttm-box-description">Aute irure dolor reprehenderit velit esse cillum dolore fugiat</div>
+                                        <div class="ttm-box-description">Have a seat until a physician is ready to see you.</div>
                                     </div>
                                 </div>
                                 <div class="ttm-processbox text-center">
@@ -1258,7 +1258,7 @@
                                         <div class="featured-title">
                                             <h5>Consultant Doctor</h5>
                                         </div>
-                                        <div class="ttm-box-description">Aute irure dolor reprehenderit velit esse cillum dolore fugiat</div>
+                                        <div class="ttm-box-description">Assess your case with the doctor for proper care.</div>
                                     </div>
                                 </div>
                                 <div class="ttm-processbox text-center">
@@ -1270,9 +1270,9 @@
                                     </div>
                                     <div class="featured-content">
                                         <div class="featured-title">
-                                            <h5>Let’s Make it Happen</h5>
+                                            <h5>Start of Treatment</h5>
                                         </div>
-                                        <div class="ttm-box-description">Aute irure dolor reprehenderit velit esse cillum dolore fugiat</div>
+                                        <div class="ttm-box-description">The proper treatment will be started as suggested per doctor.</div>
                                     </div>
                                 </div>
                             </div>
