--- a/cataract.html
+++ b/cataract.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Altech – IT Sollutions and Services HTML Template" />
     <meta name="author" content="https://www.themetechmount.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Altech – IT Solutions and Services HTML Template</title>
+    <title>Cataract</title>
 
     <!-- favicon icon -->
     <link rel="shortcut icon" href="assets/images/logo.jpg" />
@@ -54,7 +54,9 @@
         <header id="masthead" class="header ttm-header-style-01">
             <!-- ttm-topbar-wrapper -->
             <div class="ttm-topbar-wrapper clearfix">
+                <div class="container">
 
+                </div>
             </div>
             <!-- ttm-topbar-wrapper end -->
             <!-- ttm-header-wrap -->
@@ -73,7 +75,10 @@
                                 <!-- site-branding end -->
                                 <!--site-navigation -->
                                 <div id="site-navigation" class="site-navigation">
-
+                                    <div class="ttm-rt-contact">
+                                        <!-- header-icons -->
+                                        <!-- header-icons end -->
+                                    </div>
                                     <div class="ttm-menu-toggle">
                                         <input type="checkbox" id="menu-toggle-form" />
                                         <label for="menu-toggle-form" class="ttm-menu-toggle-block">
@@ -84,21 +89,44 @@
                                     </div>
                                     <nav id="menu" class="menu">
                                         <ul class="dropdown">
-                                            <li class="active"><a href="index.html">Home</a>
-
+                                            <li><a href="index.html">Home</a>
                                             </li>
-                                            <li><a href="#">About</a></li>
-                                            <li><a href="#">Services</a>
+                                            <li class="active"><a href="#">Services</a>
                                                 <ul>
-                                                    <li><a href="Cataract.html">Cataract & Phaco Surgery</a></li>
-                                                    <li><a href="digital-services.html">Glaucoma</a></li>
-                                                    <li><a href="advisory-services.html">Oculoplasty & Squint</a></li>
-                                                    <li><a href="data-structuring.html">Retina & Uvea</a></li>
-                                                    <li><a href="experience-design.html">Contact Lens</a></li>
-                                                    <li><a href="content-engineering.html">Refractive Errors</a></li>
-                                                    <li><a href="content-engineering.html">Corneal Disease</a></li>
+                                                    <li class="active"><a href="cataract.html">Cataract & Phaco Surgery</a></li>
+                                                    <li><a href="glaucoma.html">Glaucoma</a></li>
+                                                    <li><a href="#">Oculoplasty & Squint</a>
+                                                        <ul>
+                                                            <li><a href="entropion.html">Entropion</a></li>
+                                                            <li><a href="ectropion.html">Ectropion</a></li>
+                                                            <li><a href="squint.html">Squint</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li><a href="commingsoon.html">Retina & Uvea</a></li>
+                                                    <li><a href="#">Contact Lens</a>
+                                                        <ul>
+
+                                                            <li><a href="contectlens.html">Contact Lens Clinic</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li><a href="#">Refractive Errors</a>
+                                                        <ul>
+                                                            <li><a href="prk.html">PRK</a></li>
+                                                            <li><a href="about_lasik.html">About Lasik</a></li>
+                                                            <li><a href="#">Am I Eligible?</a></li>
+                                                            <li><a href="faqs.html">Faqs</a></li>
+                                                            <li><a href="icl.html">ICL</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li><a href="#">Corneal Disease</a>
+                                                        <ul>
+                                                            <li><a href="keratoconus.html">Keratoconus (C3r treatment)</a></li>
+                                                            <li><a href="pterygium.html">Pterygium</a></li>
+                                                        </ul>
+                                                    </li>
                                                 </ul>
                                             </li>
+                                            <li><a href="#">About</a></li>
                                             <li><a href="#">Project</a>
                                                 <ul>
                                                     <li><a href="project-style-01.html">Project Style 1</a></li>
@@ -304,9 +332,11 @@
                         <div class="col-lg-3 widget-area">
                             <aside class="widget widget-nav-menu">
                                 <ul class="widget-menu">
-                                    <li><a href="it-consultancy.html">IT Consultancy</a></li>
-                                    <li><a href="digital-services.html">Digital Services</a></li>
-                                    <li class="active"><a href="advisory-services.html">Advisory Services</a></li>
+                                    <li class="active"><a href="cataract.html">Cataract-eye</a></li>
+                                    <li>
+                                        <a href="glaucoma.html">Glaucoma</a>
+                                    </li>
+                                    <li><a href="advisory-services.html">Advisory Services</a></li>
                                     <li><a href="data-structuring.html">Data Structuring</a></li>
                                     <li><a href="experience-design.html">Experience Design</a></li>
                                     <li><a href="content-engineering.html">Content Engineering</a></li>
@@ -439,6 +469,11 @@
 
         <section class="element-row element-style clearfix">
             <div class="container">
+                <!-- separator -->
+                <div class="separator">
+                    <div class="sep-line mt-35 mb-35 res-991-mtb-20"></div>
+                </div>
+                <!-- separator -->
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
                         <div class="section-title clearfix">
@@ -612,8 +647,14 @@
                 <!-- row end -->
             </div>
         </section>
+
         <section class="element-row element-style clearfix">
             <div class="container">
+                <!-- separator -->
+                <div class="separator">
+                    <div class="sep-line mt-35 mb-35 res-991-mtb-20"></div>
+                </div>
+                <!-- separator -->
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
 
@@ -621,7 +662,7 @@
                             <!-- tabs -->
                             <div class="content-tab">
                                 <div class="content-inner">
-                                    <h5 class="text-center">What is posterior capsular opacification(PCO)?</h5>
+                                    <h2>What is posterior capsular opacification(PCO)?</h2>
                                     <div class="row">
                                         <div class="col-12 col-md-6 mt-40">
                                             <div class="container d-flex justify-content-center">
