--- a/index.html
+++ b/index.html
@@ -103,20 +103,43 @@
                                     <nav id="menu" class="menu">
                                         <ul class="dropdown">
                                             <li class="active"><a href="index.html">Home</a>
-
                                             </li>
-                                            <li><a href="#">About</a></li>
                                             <li><a href="#">Services</a>
                                                 <ul>
-                                                    <li><a href="Cataract.html">Cataract & Phaco Surgery</a></li>
-                                                    <li><a href="digital-services.html">Glaucoma</a></li>
-                                                    <li><a href="advisory-services.html">Oculoplasty & Squint</a></li>
-                                                    <li><a href="data-structuring.html">Retina & Uvea</a></li>
-                                                    <li><a href="experience-design.html">Contact Lens</a></li>
-                                                    <li><a href="content-engineering.html">Refractive Errors</a></li>
-                                                    <li><a href="content-engineering.html">Corneal Disease</a></li>
+                                                    <li><a href="cataract.html">Cataract & Phaco Surgery</a></li>
+                                                    <li><a href="glaucoma.html">Glaucoma</a></li>
+                                                    <li><a href="#">Oculoplasty & Squint</a>
+                                                        <ul>
+                                                            <li><a href="entropion.html">Entropion</a></li>
+                                                            <li><a href="ectropion.html">Ectropion</a></li>
+                                                            <li><a href="squint.html">Squint</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li><a href="commingsoon.html">Retina & Uvea</a></li>
+                                                    <li><a href="#">Contact Lens</a>
+                                                        <ul>
+
+                                                            <li><a href="contectlens.html">Contact Lens Clinic</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li><a href="#">Refractive Errors</a>
+                                                        <ul>
+                                                            <li><a href="prk.html">PRK</a></li>
+                                                            <li><a href="about_lasik.html">About Lasik</a></li>
+                                                            <li><a href="#">Am I Eligible?</a></li>
+                                                            <li><a href="faqs.html">Faqs</a></li>
+                                                            <li><a href="icl.html">ICL</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li><a href="#">Corneal Disease</a>
+                                                        <ul>
+                                                            <li><a href="keratoconus.html">Keratoconus (C3r treatment)</a></li>
+                                                            <li><a href="pterygium.html">Pterygium</a></li>
+                                                        </ul>
+                                                    </li>
                                                 </ul>
                                             </li>
+                                            <li><a href="#">About</a></li>
                                             <li><a href="#">Project</a>
                                                 <ul>
                                                     <li><a href="project-style-01.html">Project Style 1</a></li>
