--- a/squint.html
+++ b/squint.html
@@ -295,12 +295,13 @@
                         <div class="col-lg-3 widget-area ">
                             <aside class="widget widget-nav-menu ">
                                 <ul class="widget-menu ">
-                                    <li><a href="cataract.html ">Cataract-eye</a></li>
-                                    <li class="active "><a href="glaucoma.html ">Glaucoma</a></li>
-                                    <li><a href="advisory-services.html ">Advisory Services</a></li>
-                                    <li><a href="data-structuring.html ">Data Structuring</a></li>
-                                    <li><a href="experience-design.html ">Experience Design</a></li>
-                                    <li><a href="content-engineering.html ">Content Engineering</a></li>
+                                    <li><a href="cataract.html ">Cataract & Phaco Surgery</a></li>
+                                    <li><a href="glaucoma.html ">Glaucoma</a></li>
+                                    <li class="active"><a href="ectropion.html">Oculoplasty & Squint</a></li>
+                                    <li><a href="commingsoon.html">Retina & Uvea</a></li>
+                                    <li><a href="contectlens.html">Contact Lens</a></li>
+                                    <li><a href="prk.html">Refractive Errors</a></li>
+                                    <li><a href="keratoconus.html">Coeneal Disease</a></li>
                                 </ul>
                             </aside>
                             <aside class="widget widget-text ">
